--- a/.env
+++ b/.env
@@ -33,8 +33,8 @@ PAYMENT_MIN_AMOUNT=1000
 
 # Pakasir API Configuration (only needed if PAYMENT_GATEWAY=pakasir)
 # Get your API Key and Slug from https://app.pakasir.com
-PAKASIR_API_KEY=
-PAKASIR_PROJECT_SLUG=
+PAKASIR_API_KEY=TVSHqYbx70SV0x4B3el2aD5ajO2j1pS6
+PAKASIR_PROJECT_SLUG=kazzah-ofc
 
 
 # Payment Gateway Selection
