--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ PAKASIR_PROJECT_SLUG=kazzah-ofc
 # Payment Gateway Selection
 # Options: atlantic, pakasir
 # Set to "pakasir" to use Pakasir, or "atlantic" to use Atlantic H2H
-PAYMENT_GATEWAY=atlantic
+PAYMENT_GATEWAY=pakasir
 
 # ------------------------------------------------------------------------------
 # WEBHOOK CONFIGURATION (Required)
